creates custom environment loader

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,16 @@
   overflow: hidden; /* hide any overflow */
 }
 
+.App-scene{
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 0;
+  margin: 0;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
